# ecommerce-analysis

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: 0.1 data-audit.ipynb  4.0-kpi-dashboard.ipynb  cleaning-master.ipynb  data-audit.ipynb  eda-delivery.ipynb  eda-geolocation.ipynb  eda-orders.ipynb  eda-payments.ipynb  eda-reviews.ipynb
olist/: __init__.py  data.py  dataset.py  features.py  plots.py
olist/modeling/: predict.py  train.py
source/: pyvenv.cfg
source/Scripts/: activate  activate.bat
tests/: test_data.py
